# CM2018_Ex4

./: CMakeLists.txt  README.md  input.json  plot.py
include/: analytic_period.hpp  second_order_solver.hpp
src/: analytic_period.cpp  json11.cpp  second_order_solver.cpp  solve.cpp
